0.217 2023-05-30
  [Test Improvement]
    * Add tests for IO::Select using a test HTTP server.
  [Incompatible Changes]
    * Remove an argument of IO::Socket#shutdown method.
      [Before]
      method shutdown : void ($sockfd : int, $how : int);
      
      [After]
      method shutdown : void ($how : int);
    * IO::Socket#close method throw an excetpion if the socket is not opened.
  [Changes]
    * The following method in IO::Socket class becomes public.
      
      socket
      connect
      listen
      bind
      accept
  [Requirement Changes]
    * Require SPVM::Sys 0.517.
0.216 2023-05-29
  [Requirement Changes]
    * Require SPVM::Sys 0.516.
  [New Features]
    * Add IO::Poll class.
0.215 2023-05-24
  [New Features]
    * Add IO::Dir class.
  [Requirement Changes]
    * Require SPVM::Sys 0.515.
    
0.214 2023-05-21
  [Imcompatible Changes]
    * handles field in IO::Select is renamed to fds_list.
    * The type of add method in IO::Select is changed from int to void.
    * The type of remove method in IO::Select is changed from int to void.
    * handles method in IO::Select is renamed to fds.
  [New Features]
    * Add count method to IO::Select class.
    * An argument in IO::Select#can_read method becomes an optional argument. Negative value means block indefinitely.
      [Before]
      method can_read : int[] ($timeout : double);
      
      [After]
      method can_read : int[] ($timeout : double = -1);
      
    * An argument in IO::Select#can_write method becomes an optional argument. Negative value means block indefinitely.
      [Before]
      method can_write : int[] ($timeout : double);
      
      [After]
      method can_write : int[] ($timeout : double = -1);
      
    * An argument in IO::Select#can_has_exception method becomes an optional argument. Negative value means block indefinitely.
      [Before]
      method can_has_exception : int[] ($timeout : double);
      
      [After]